fix responsive newsletter input on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -907,11 +907,12 @@ body {
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          width: 80%;
 
           input[type="text"] {
-            width: 80%;
             padding: 8px 10px;
             margin-bottom: 10px;
+            width: 100%;
           }
     
           button {
